--- a/{{ cookiecutter.package_name }}/pyproject.toml
+++ b/{{ cookiecutter.package_name }}/pyproject.toml
@@ -1,12 +1,29 @@
 [project]
-name = "{{cookiecutter.project_name}}"
-version = "{{ cookiecutter.project_version }}"
-description = "{{ cookiecutter.project_description }}"
+name = "{{cookiecutter.package_name}}"
+version = "0.1.0"
+description = "{{ cookiecutter.short_description }}"
 authors = [
-    { name = "{{ cookiecutter.project_author }}", email = "{{ cookiecutter.project_author_email }}" },
+    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
 ]
-dependencies = []
-requires-python = "{{ cookiecutter.requires_python | default('>=3.11') }}"
+dependencies = [
+    {%- if cookiecutter.include_http_pkgs.lower() == "yes" %}
+        {%- for pkg in cookiecutter.__http_packages %}
+    "{{ pkg }}",{%- endfor %}
+    {%- endif %}
+    {%- if cookiecutter.include_pydantic.lower() == "yes" %}
+    "pydantic",{%- endif %}
+    {%- if cookiecutter.include_config_helpers.lower() == "yes" %}
+        {%- for pkg in cookiecutter.__config_packages %}
+    "{{ pkg }}",{%- endfor %}
+        {%- if cookiecutter.include_pydantic.lower() == "no" %}
+    "pydantic",{%- endif %}
+    {%- endif %}
+    {%- if cookiecutter.include_pandas.lower() == "yes" %}
+    "pandas",{%- endif %}
+    {%- if cookiecutter.include_jupyter.lower() == "yes" %}
+    "jupyter",{%- endif %}
+]
+requires-python = "{{ cookiecutter.__requires_python | default('>=3.11') }}"
 readme = "README.md"
 license = { text = "MIT" }
 
@@ -16,15 +33,15 @@ build-backend = "pdm.backend"
 
 
 [tool.pdm]
-distribution = {{ cookiecutter.dist | lower | default(false) }}
+distribution = {% if cookiecutter.distribution.lower() == "yes" %}true{% else %}false{% endif %}
 
 [tool.pdm.dev-dependencies]
 dev = [
-    "ruff>=0.5.7",
-    "nox>=2024.4.15",
-    "pytest-xdist>=3.6.1",
-    "black>=24.8.0",
-    "uv>=0.2.35",
+    "ruff",
+    "nox",
+    "pytest-xdist",
+    "black",
+    "uv",
 ]
 
 [tool.pytest.ini_options]
