Add pre-commit config, repos

--- a/{{ cookiecutter.package_name }}/pyproject.toml
+++ b/{{ cookiecutter.package_name }}/pyproject.toml
@@ -42,6 +42,8 @@ dev = [
     "pytest-xdist",
     "black",
     "uv",
+    {%- if cookiecutter.include_pre_commit.lower() == "yes" %}
+    "pre-commit",{%- endif %}
 ]
 
 [tool.pytest.ini_options]
